<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    android:orientation="vertical" >
    


	<TextView
            android:id="@+id/tv_tablegrabber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tablegrabber"
            android:gravity="center"
            android:textColor="#A2F368"
            android:textSize="25sp"
            android:typeface="serif" 
            android:textAppearance="?android:attr/textAppearanceLarge" 
            />

	<View                                      
   			android:layout_width="fill_parent"
			android:layout_height="2dp" 
			android:layout_marginBottom="0dp"      
			android:background="#C0C0C0"  />

	<TextView 
	    	android:id="@+id/tv_forgetpassword"
	    	android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:text="@string/forgetpassword"
	    	android:gravity="center"
	    	android:layout_marginTop="10dp"
	    	android:textStyle="bold"
	    	android:textAppearance="?android:attr/textAppearanceMedium"
	    	/>
	
	<TextView 
	    	android:id="@+id/tv_fptext"
	    	android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:text="@string/fptext"
	    	android:layout_marginTop="10dp"
	    	android:textAppearance="?android:attr/textAppearanceMedium"
	    	/>

	<RelativeLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" >

	<EditText
        	android:id="@+id/et_email"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
	        android:hint="@string/email"
	        android:inputType="textEmailAddress"
	        android:ems="10"
	        android:typeface="serif" />

	<Button
	    android:id="@+id/btn_send"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:layout_toRightOf="@+id/et_email"
	    android:text="@string/send" />
	
	</RelativeLayout>
	        
</LinearLayout>