<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_bookatable"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/bookatableheading"
        android:textColor="#A2F368"
        android:textSize="25sp"
        android:typeface="serif" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="5dp"
        android:background="#C0C0C0" />

    

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:background="#C0C0C0" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

        <TextView
                android:id="@+id/tv_guestname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/enterguestname"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:typeface="serif" />
        
        
        <EditText 
	    	android:id="@+id/et_guestname"
	    	android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:hint="@string/guestname"
	    	android:typeface="serif"
	    	android:ems="10"  />
            
            
            
            <TextView
                android:id="@+id/tv_noofguest"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/guestnumber"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:typeface="serif" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btn_minus"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:text="-" />

                <EditText
                    android:id="@+id/et_noofguest"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:focusable="false"
                    android:gravity="center"
                    android:hint="0"
                    android:inputType="number" />

                <Button
                    android:id="@+id/btn_plus"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:text="+" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_selectdatetime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selectdatetime"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:typeface="serif" />

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:layout_gravity="bottom"/>

            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            
            <TextView
                android:id="@+id/tv_emailid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enteremailid"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:typeface="serif" />
            
            <EditText 
		    	android:id="@+id/et_emailid"
		    	android:layout_width="match_parent"
		    	android:layout_height="wrap_content"
		    	android:hint="@string/email"
		    	android:typeface="serif"
		    	android:ems="10"
		    	android:inputType="textEmailAddress" />
            
            <TextView
                android:id="@+id/tv_mobileno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/entermobileno"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:typeface="serif" />
     
		    <EditText 
		    	android:id="@+id/et_mobileno"
		    	android:layout_width="match_parent"
		    	android:layout_height="wrap_content"
		    	android:hint="@string/mobileno"
		    	android:typeface="serif"
		    	android:ems="10"
		    	android:inputType="phone"  />
            

            <Button
                android:id="@+id/btn_booktable"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnbooktable"
                android:typeface="serif" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>